Style navbar and fix overlapping expand menu

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,5 @@
-/* Import Lora font from Adobe Fonts */
+/* Import Lora font from Adobe Fonts and Manrope font from Google Fonts and Manrope font from Google Fonts */
 @import url("https://use.typekit.net/mbd1prr.css");
-
-/* Import Manrope font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
 
  /* CSS variables */
@@ -14,7 +12,7 @@
  body {
    font-family: var(--font-body);
    /* push body content underneath fixed nav */
-   margin-top: 80px;
+   margin-top: 70px;
 }
 
 h1, 
@@ -24,37 +22,14 @@ h2 {
 
  /* Navbar */
  #navbar {
-   height: 5rem;
    background-color: #f5f5f5;
 }
 
-/*
- push navbar menu down when expanded 
- this is causing issues when expanded/not expanded
- */
-#navbar .navbar-collapse {
-   margin-top: 5rem;
-}
-
-#navbar .container-fluid {
-   background-color: #f5f5f5;
-}
-
-/* keep navbar icons static when navbar is expanded */
-#navbar .navbar-toggler,
-#navbar .book-form-btn {
+#navbar .logo {
    position: absolute;
-   top: 50%;
-}
-
-#navbar .navbar-toggler {
-   right: 1rem;
-   transform: translateY(-50%);
-}
-
-#navbar .book-form-btn {
-   left: 1rem;
-   transform: translateY(-50%);
+   top: 10px;
+   left: 50%;
+   transform: translateX(-50%);
 }
 
 #logo h1 {
@@ -71,13 +46,18 @@ h2 {
     margin: 0;
  }
 
- #navbar i {
+ #navbar .icon {
    font-size: 1.5rem;
  }
 
- /* repeat class, is removing border from Bootstrap class */
  #navbar .navbar-toggler {
    border: none;
+   margin-top: -3px;
+ }
+
+ /* remove Bootstrap property causing burger icon to highlight when clicked */
+ #navbar .navbar-toggler:focus {
+   box-shadow: none; /* replace with --secondary-colour for accessibility */
  }
 
   #navbar .book-form-btn {
@@ -85,18 +65,25 @@ h2 {
  }
 
 
+
+
+
  /* Media queries */
 
  /* Medium devices (tablets, 768px and up) */
  @media screen and (min-width: 768px) {
+   
    /* Navbar */
-
    #logo h1 {
       font-size: 1.75rem;
       letter-spacing: 2px;
    }
    #logo h2 {
       font-size: 1.25rem;
+   }
+
+   #navbar .logo {
+      top: 0;
    }
 
    #navbar i {
